strings.xml: add unmute speaker prefs
preferences.xml: add enable speaker pref, depend speaker volume on former

BluetoothBroadcastReceiver: remove if (oldState == state) check

HeadsetVolumeService: change switch (state) to if state == 0 and > 0
(1.5 compat)

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android">
+    <CheckBoxPreference
+        android:key="@string/key_unmute_speaker_flag"
+        android:title="@string/title_unmute_speaker_flag"
+        android:summary="@string/summary_unmute_speaker_flag"/>
     <com.hanhuy.android.a2dp.volume.VolumePreference
         android:key="speakervolume"
+        android:dependency="@string/key_unmute_speaker_flag"
         android:title="@string/title_speakervolume_pref"
         android:summary="@string/summary_speakervolume_pref"
         android:dialogMessage="@string/dialog_msg_speakervolume_pref"
